--- a/index.html
+++ b/index.html
@@ -120,5 +120,11 @@
 
     <!-- הוספת אייקונים -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <iframe
+    src="https://www.chatbase.co/chatbot-iframe/BaL4Gig-UZGrFov2oHj86"
+    width="100%"
+    style="height: 100%; min-height: 700px"
+    frameborder="0"
+></iframe>
 </body>
 </html>
